--- a/Odin-Recipes/Recipes/zuppa.html
+++ b/Odin-Recipes/Recipes/zuppa.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Zuppa Toscana</title>
+    
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Zuppa Toscana</h1>
+    <a target="_blank" href="zuppa.jpg">
+        <img src="zuppa.jpg"/>
+    </a>
 </body>
 </html>
