--- a/Odin-Recipes/Recipes/zuppa.html
+++ b/Odin-Recipes/Recipes/zuppa.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zuppa Toscana</title>
-    
+    <link rel="stylesheet" href="../RecipeStyles.css">
 </head>
 <body>
     <h1>Zuppa Toscana</h1>
     <a target="_blank" href="zuppa.jpg">
-        <img src="zuppa.jpg"/>
+        <img class="TopImage" src="zuppa.jpg"/>
     </a>
+    <p>Garnish this Instant Pot® zuppa toscana with Parmesan cheese or bacon bits.</p>
+
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>1 pound bulk Italian sausage</li>
+        <li>1 large onion, chopped</li>
+        <li>4 cloves garlic, minced</li>
+        <li>1 tablespoon Italian seasoning</li>
+        <li>½ teaspoon salt</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>¼ teaspoon red pepper flakes</li>
+        <li>4 medium potatoes, cubed</li>
+        <li>4 cups chicken broth</li>
+        <li>4 cups chopped kale</li>
+        <li>1 cup half-and-half</li>
+    </ul>
+
+    <h2>Steps: </h2>
+    <ol>
+        <li>Turn on a multi-functional pressure cooker (such as Instant Pot®) and select Saute function.</li>
+        <li>Heat oil in the cooker. Add sausage and cook until no longer pink, about 3 minutes. Stir in onion and garlic; cook until softened and translucent, about 3 minutes. Stir in Italian seasoning, salt, pepper, and red pepper flakes. Add potatoes and chicken broth. Close and lock the lid. Select high pressure and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
+        <li>Release pressure using the natural-release method according to manufacturer's instructions, 10 to 40 minutes. Unlock and remove the lid.</li>
+        <li>Stir kale into the cooker. Select Saute function. Cook, uncovered, for 2 minutes. Stir in half-and-half. Turn off the cooker and serve.</li>
+        
+    </ol>
 </body>
 </html>
