Navigation to recipes

--- a/Odin-Recipes/Recipes/zuppa.html
+++ b/Odin-Recipes/Recipes/zuppa.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../RecipeStyles.css">
 </head>
 <body>
-    <h1>Zuppa Toscana</h1>
+    <h1><a href="../Index.html">Odin Recipes</a> - Zuppa Toscana</h1>
     <a target="_blank" href="zuppa.jpg">
         <img class="TopImage" src="zuppa.jpg"/>
     </a>
@@ -36,7 +36,7 @@
         <li>Heat oil in the cooker. Add sausage and cook until no longer pink, about 3 minutes. Stir in onion and garlic; cook until softened and translucent, about 3 minutes. Stir in Italian seasoning, salt, pepper, and red pepper flakes. Add potatoes and chicken broth. Close and lock the lid. Select high pressure and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
         <li>Release pressure using the natural-release method according to manufacturer's instructions, 10 to 40 minutes. Unlock and remove the lid.</li>
         <li>Stir kale into the cooker. Select Saute function. Cook, uncovered, for 2 minutes. Stir in half-and-half. Turn off the cooker and serve.</li>
-        
+
     </ol>
 </body>
 </html>
