--- a/Odin-Recipes/Index.html
+++ b/Odin-Recipes/Index.html
@@ -10,6 +10,8 @@
     <h1>Odin Recipes</h1>
 
     <ul>
+        <li><a href="Recipes/zuppa.html">Zuppa Toscana</a></li>
+        <li><a href=""></a></li>
         <li><a href=""></a></li>
     </ul>
 </body>
