--- a/Odin-Recipes/Index.html
+++ b/Odin-Recipes/Index.html
@@ -11,7 +11,7 @@
 
     <ul>
         <li><a href="Recipes/zuppa.html">Zuppa Toscana</a></li>
-        <li><a href=""></a></li>
+        <li><a href="Recipes/quinoa.html">Quinoa</a></li>
         <li><a href=""></a></li>
     </ul>
 </body>
