--- a/Odin-Recipes/Index.html
+++ b/Odin-Recipes/Index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="Recipes/zuppa.html">Zuppa Toscana</a></li>
         <li><a href="Recipes/quinoa.html">Quinoa</a></li>
-        <li><a href=""></a></li>
+        <li><a href="Recipes/collard.html">Collard Greens</a></li>
     </ul>
 </body>
 </html>
