--- a/Odin-Recipes/Recipes/collard.html
+++ b/Odin-Recipes/Recipes/collard.html
@@ -6,31 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collard Greens</title>
     <link rel="stylesheet" href="../RecipeStyles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><a href="../Index.html">Odin Recipes</a> - Collard Greens</h1>
+    <h1><a class="headingLink" href="../Index.html">Odin Recipes</a> - Collard Greens</h1>
     <a target="_blank" href="collard.jpg">
         <img class="TopImage" src="collard.jpg"/>
     </a>
-    <p>Quick Southern-style collard greens made in your Instant Pot®.</p>
+    <p id="description">Quick Southern-style collard greens made in your Instant Pot®.</p>
 
-    <h2>Ingredients:</h2>
+    <h2 class="listHeading">Ingredients:</h2>
     <ul>
-        <li>1 bunch collard greens</li>
-        <li>4 thick slices bacon, cut into 1-inch pieces</li>
-        <li>4 cups water</li>
-        <li>2 tablespoons white vinegar</li>
-        <li>4 cups chicken broth</li>
-        <li>salt to taste</li>
+        <li class="listItem">1 bunch collard greens</li>
+        <li class="listItem">4 thick slices bacon, cut into 1-inch pieces</li>
+        <li class="listItem">4 cups water</li>
+        <li class="listItem">2 tablespoons white vinegar</li>
+        <li class="listItem">4 cups chicken broth</li>
+        <li class="listItem">salt to taste</li>
     </ul>
 
-    <h2>Steps: </h2>
+    <h2 class="listHeading">Steps: </h2>
     <ol>
-        <li>Rinse collard greens; remove and discard thick parts of stems. Chop greens to desired size.</li>
-        <li>Turn on a multi-functional pressure cooker (such as Instant Pot®) and select Saute function. Cook bacon until brown and crisp, about 5 minutes. Turn off Saute function. Pour in water and vinegar. Scrape the bottom of the pot to release stuck bits of bacon. Add collard greens and stir to coat. Pour in chicken broth and season with salt. Close and lock the lid.</li>
-        <li>Select high pressure according to manufacturer's instructions; set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
-        <li>Release pressure using the natural-release method according to manufacturer's instructions for 20 minutes. Quick-release remaining steam, according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid. Season with more salt if necessary.</li>
-        
+        <li class="listItem">Rinse collard greens; remove and discard thick parts of stems. Chop greens to desired size.</li>
+        <li class="listItem">Turn on a multi-functional pressure cooker (such as Instant Pot®) and select Saute function. Cook bacon until brown and crisp, about 5 minutes. Turn off Saute function. Pour in water and vinegar. Scrape the bottom of the pot to release stuck bits of bacon. Add collard greens and stir to coat. Pour in chicken broth and season with salt. Close and lock the lid.</li>
+        <li class="listItem">Select high pressure according to manufacturer's instructions; set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
+        <li class="listItem">Release pressure using the natural-release method according to manufacturer's instructions for 20 minutes. Quick-release remaining steam, according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid. Season with more salt if necessary.</li>
+
     </ol>
 </body>
 </html>
