--- a/Odin-Recipes/Recipes/quinoa.html
+++ b/Odin-Recipes/Recipes/quinoa.html
@@ -6,24 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinoa</title>
     <link rel="stylesheet" href="../RecipeStyles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><a href="../Index.html">Odin Recipes</a> - Instant Pot Quinoa</h1>
+    <h1><a class="headingLink" href="../Index.html">Odin Recipes</a> - Instant Pot Quinoa</h1>
     <a target="_blank" href="quinoa.jpg">
         <img class="TopImage" src="quinoa.jpg"/>
     </a>
-    <p>Perfect fluffy quinoa. One shot in the Instant Pot®!</p>
+    <p id="description">Perfect fluffy quinoa. One shot in the Instant Pot®!</p>
 
-    <h2>Ingredients:</h2>
+    <h2 class="listHeading">Ingredients:</h2>
     <ul>
-        <li>1 cup water</li>
-        <li>1 cup quinoa, rinsed and drained</li>
+        <li class="listItem">1 cup water</li>
+        <li class="listItem">1 cup quinoa, rinsed and drained</li>
     </ul>
 
-    <h2>Steps: </h2>
+    <h2 class="listHeading">Steps: </h2>
     <ol>
-        <li>Combine water and quinoa in a multi-functional pressure cooker (such as Instant Pot®); mix well. Close and lock the lid; set the pressure release valve to the sealing position. Press Steam button twice and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
-        <li>Release pressure carefully using the quick-release method according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid.</li>
+        <li class="listItem">Combine water and quinoa in a multi-functional pressure cooker (such as Instant Pot®); mix well. Close and lock the lid; set the pressure release valve to the sealing position. Press Steam button twice and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
+        <li class="listItem">Release pressure carefully using the quick-release method according to manufacturer's instructions, about 5 minutes. Unlock and remove the lid.</li>
 
     </ol>
 </body>
