--- a/Odin-Recipes/Recipes/zuppa.html
+++ b/Odin-Recipes/Recipes/zuppa.html
@@ -6,36 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zuppa Toscana</title>
     <link rel="stylesheet" href="../RecipeStyles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><a href="../Index.html">Odin Recipes</a> - Zuppa Toscana</h1>
+    <h1><a class="headingLink" href="../Index.html">Odin Recipes</a> - Zuppa Toscana</h1>
     <a target="_blank" href="zuppa.jpg">
         <img class="TopImage" src="zuppa.jpg"/>
     </a>
-    <p>Garnish this Instant Pot® zuppa toscana with Parmesan cheese or bacon bits.</p>
+    <p id="description">Garnish this Instant Pot® zuppa toscana with Parmesan cheese or bacon bits.</p>
 
-    <h2>Ingredients:</h2>
+    <h2 class="listHeading">Ingredients:</h2>
     <ul>
-        <li>1 tablespoon olive oil</li>
-        <li>1 pound bulk Italian sausage</li>
-        <li>1 large onion, chopped</li>
-        <li>4 cloves garlic, minced</li>
-        <li>1 tablespoon Italian seasoning</li>
-        <li>½ teaspoon salt</li>
-        <li>½ teaspoon ground black pepper</li>
-        <li>¼ teaspoon red pepper flakes</li>
-        <li>4 medium potatoes, cubed</li>
-        <li>4 cups chicken broth</li>
-        <li>4 cups chopped kale</li>
-        <li>1 cup half-and-half</li>
+        <li class="listItem">1 tablespoon olive oil</li>
+        <li class="listItem">1 pound bulk Italian sausage</li>
+        <li class="listItem">1 large onion, chopped</li>
+        <li class="listItem">4 cloves garlic, minced</li>
+        <li class="listItem">1 tablespoon Italian seasoning</li>
+        <li class="listItem">½ teaspoon salt</li>
+        <li class="listItem">½ teaspoon ground black pepper</li>
+        <li class="listItem">¼ teaspoon red pepper flakes</li>
+        <li class="listItem">4 medium potatoes, cubed</li>
+        <li class="listItem">4 cups chicken broth</li>
+        <li class="listItem">4 cups chopped kale</li>
+        <li class="listItem">1 cup half-and-half</li>
     </ul>
 
-    <h2>Steps: </h2>
+    <h2 class="listHeading">Steps: </h2>
     <ol>
-        <li>Turn on a multi-functional pressure cooker (such as Instant Pot®) and select Saute function.</li>
-        <li>Heat oil in the cooker. Add sausage and cook until no longer pink, about 3 minutes. Stir in onion and garlic; cook until softened and translucent, about 3 minutes. Stir in Italian seasoning, salt, pepper, and red pepper flakes. Add potatoes and chicken broth. Close and lock the lid. Select high pressure and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
-        <li>Release pressure using the natural-release method according to manufacturer's instructions, 10 to 40 minutes. Unlock and remove the lid.</li>
-        <li>Stir kale into the cooker. Select Saute function. Cook, uncovered, for 2 minutes. Stir in half-and-half. Turn off the cooker and serve.</li>
+        <li class="listItem">Turn on a multi-functional pressure cooker (such as Instant Pot®) and select Saute function.</li>
+        <li class="listItem">Heat oil in the cooker. Add sausage and cook until no longer pink, about 3 minutes. Stir in onion and garlic; cook until softened and translucent, about 3 minutes. Stir in Italian seasoning, salt, pepper, and red pepper flakes. Add potatoes and chicken broth. Close and lock the lid. Select high pressure and set timer for 5 minutes. Allow 10 to 15 minutes for pressure to build.</li>
+        <li class="listItem">Release pressure using the natural-release method according to manufacturer's instructions, 10 to 40 minutes. Unlock and remove the lid.</li>
+        <li class="listItem">Stir kale into the cooker. Select Saute function. Cook, uncovered, for 2 minutes. Stir in half-and-half. Turn off the cooker and serve.</li>
 
     </ol>
 </body>
