--- a/Odin-Recipes/Index.html
+++ b/Odin-Recipes/Index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="RecipeStyles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="Recipes/zuppa.html">Zuppa Toscana</a></li>
-        <li><a href="Recipes/quinoa.html">Quinoa</a></li>
-        <li><a href="Recipes/collard.html">Collard Greens</a></li>
+        <li class="listItem"><a class="headingLink listLink" href="Recipes/zuppa.html">Zuppa Toscana</a></li>
+        <li class="listItem"><a class="headingLink listLink" href="Recipes/quinoa.html">Quinoa</a></li>
+        <li class="listItem"><a class="headingLink listLink" href="Recipes/collard.html">Collard Greens</a></li>
     </ul>
 </body>
 </html>
