--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -5,8 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project - Landing Page</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header class="header-block">
+        <div id="logo">
+            SOMBRA
+        </div>
+        <div class="header-link-block">
+            <a target="_blank" href="https://playoverwatch.com/en-us/heroes/sombra/">
+                <p class="header-link-item">Guide</p>
+            </a>
+            <a target="_blank" href="https://playoverwatch.com/en-us/">
+                <p class="header-link-item">Home</p>
+            </a>
+            <a target="_blank" href="https://www.jinx.com/collections/overwatch">
+                <p class="header-link-item">Gear</p>
+            </a>
+        </div>
+    </header>
+    <div class="main-block">
+        <img id="banner" src="sombra-banner.png" />
+        <div class="title-block">
+            <div class="title-left">
+                <p>¡Apagando las luces! </p>
+                <p>Stealth and debilitating attacks make Sombra a powerful infiltrator. Her hacking can disrupt her enemies, ensuring they're easier to take out, while her EMP provides the upper hand against multiple foes at once. Sombra's ability to Translocate and camouflage herself makes her a hard target to pin down.</p>
+                <button>Join Overwatch</button>
+            </div>
+            <img id="sombra" src="sombra.jpg" />
+        </div>
+        <div class="info-block">
+
+        </div>
+        <div class="quote-block">
+
+        </div>
+        <div class="signup-block">
+
+        </div>
+        <div class="footer">
+            <p>Copyright &#169; The Odin Project 2022</p>
+        </div>
+    </div>
+
+
+
+    <div>
+        <div>
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div>
+            <button>Sign up</button>
+        </div>
+    </div>
 </body>
 </html>
