--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -7,6 +7,9 @@
     <title>Project - Landing Page</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header-block">
@@ -15,13 +18,13 @@
         </div>
         <div class="header-link-block">
             <a target="_blank" href="https://playoverwatch.com/en-us/heroes/sombra/">
-                <p class="header-link-item">Guide</p>
+                <p class="header-link-item">GUIDE</p>
             </a>
             <a target="_blank" href="https://playoverwatch.com/en-us/">
-                <p class="header-link-item">Home</p>
+                <p class="header-link-item">HOME</p>
             </a>
             <a target="_blank" href="https://www.jinx.com/collections/overwatch">
-                <p class="header-link-item">Gear</p>
+                <p class="header-link-item">GEAR</p>
             </a>
         </div>
     </header>
@@ -36,11 +39,36 @@
             <img id="sombra" src="sombra.jpg" />
         </div>
         <div class="info-block">
-
+            <p>Sombra's Abilities</p>
+            <div class="info-abilities">
+                <div class="info-item">
+                    <img src="ability-1.png" />
+                    <p>Translocator</p>
+                </div>
+                <div class="info-item">
+                    <img src="ability-2.png" />
+                    <p>Stealth</p>
+                </div>
+                <div class="info-item">
+                    <img src="ability-3.png" />
+                    <p>Hack</p>
+                </div>
+                <div class="info-item">
+                    <img src="ability-4.png" />
+                    <p>EMP</p>
+                </div>
+                <div class="info-item">
+                    <img src="ability-5.png" />
+                    <p>Opportunist</p>
+                </div>
+            </div>
         </div>
-        <div class="quote-block">
-
-        </div>
+        <figure class="quote-block">
+            <blockquote cite="https://overwatch.fandom.com/wiki/Sombra/Quotes">
+                <p>Ooh, I can't stand you hackers. You give those of us with skill a bad name.</p>
+            </blockquote>
+            <figcaption>D.VA</figcaption>
+        </figure>
         <div class="signup-block">
 
         </div>
