--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -29,36 +29,36 @@
         </div>
     </header>
     <div class="main-block">
-        <img id="banner" src="sombra-banner.png" />
+        <img id="banner" src="images/sombra-banner.png" />
         <div class="title-block">
             <div class="title-left">
                 <p id="title">¡Apagando las luces! </p>
                 <p id="title-desc">Stealth and debilitating attacks make Sombra a powerful infiltrator. Her hacking can disrupt her enemies, ensuring they're easier to take out, while her EMP provides the upper hand against multiple foes at once. Sombra's ability to Translocate and camouflage herself makes her a hard target to pin down.</p>
                 <button id="button-join">Join Overwatch</button>
             </div>
-            <img id="sombra" src="sombra.jpg" />
+            <img id="sombra" src="images/sombra.jpg" />
         </div>
         <div class="info-block">
             <p id="info-block-title">Sombra's Abilities</p>
             <div class="info-abilities">
                 <div class="info-item">
-                    <img src="ability-1.png" />
+                    <img src="images/ability-1.png" />
                     <p>Translocator</p>
                 </div>
                 <div class="info-item">
-                    <img src="ability-2.png" />
+                    <img src="images/ability-2.png" />
                     <p>Stealth</p>
                 </div>
                 <div class="info-item">
-                    <img src="ability-3.png" />
+                    <img src="images/ability-3.png" />
                     <p>Hack</p>
                 </div>
                 <div class="info-item">
-                    <img src="ability-4.png" />
+                    <img src="images/ability-4.png" />
                     <p>EMP</p>
                 </div>
                 <div class="info-item">
-                    <img src="ability-5.png" />
+                    <img src="images/ability-5.png" />
                     <p>Opportunist</p>
                 </div>
             </div>
