--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -64,10 +64,12 @@
             </div>
         </div>
         <figure class="quote-block">
-            <blockquote cite="https://overwatch.fandom.com/wiki/Sombra/Quotes">
-                <p>Ooh, I can't stand you hackers. You give those of us with skill a bad name.</p>
-            </blockquote>
-            <figcaption>D.VA</figcaption>
+            <div id="quote">
+                <blockquote cite="https://overwatch.fandom.com/wiki/Sombra/Quotes">
+                    <em>"Ooh, I can't stand you hackers. You give those of us with skill a bad name."</em>
+                </blockquote>
+                <figcaption>-- D.VA</figcaption>
+            </div>
         </figure>
         <div class="signup-block">
 
