Footer & Signup block

--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -71,23 +71,19 @@
                 <figcaption>-- D.VA</figcaption>
             </div>
         </figure>
-        <div class="signup-block">
-
+        <div class="signup">
+            <div class="signup-block">
+                <div id="signup-message">
+                    <p>Call to action! It's time!</p>
+                    <p>Find Sombra now!</p>
+                </div>
+                <div>
+                    <button>Join Overwatch</button>
+                </div>
+            </div>
         </div>
         <div class="footer">
-            <p>Copyright &#169; The Odin Project 2022</p>
-        </div>
-    </div>
-
-
-
-    <div>
-        <div>
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div>
-            <button>Sign up</button>
+            <p>The Odin Project 2022</p>
         </div>
     </div>
 </body>
