--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -78,7 +78,7 @@
                     <p>Find Sombra now!</p>
                 </div>
                 <div>
-                    <button>Join Overwatch</button>
+                    <button id="button-bottom">Join Overwatch</button>
                 </div>
             </div>
         </div>
