--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -34,7 +34,7 @@
             <div class="title-left">
                 <p id="title">¡Apagando las luces! </p>
                 <p id="title-desc">Stealth and debilitating attacks make Sombra a powerful infiltrator. Her hacking can disrupt her enemies, ensuring they're easier to take out, while her EMP provides the upper hand against multiple foes at once. Sombra's ability to Translocate and camouflage herself makes her a hard target to pin down.</p>
-                <button id="button-join">Join Overwatch</button>
+                <a href="images/ability-0/que/matrix.html"><button id="button-join">Join Overwatch</button></a>
             </div>
             <img id="sombra" src="images/sombra.jpg" />
         </div>
@@ -78,7 +78,7 @@
                     <p>Find Sombra now!</p>
                 </div>
                 <div>
-                    <button id="button-bottom">Join Overwatch</button>
+                    <a href="images/ability-0/que/matrix.html"><button id="button-bottom">Join Overwatch</button></a>
                 </div>
             </div>
         </div>
