Removing button tags

--- a/Odin-Recipes/Landing-Page/index-landing.html
+++ b/Odin-Recipes/Landing-Page/index-landing.html
@@ -34,7 +34,7 @@
             <div class="title-left">
                 <p id="title">¡Apagando las luces! </p>
                 <p id="title-desc">Stealth and debilitating attacks make Sombra a powerful infiltrator. Her hacking can disrupt her enemies, ensuring they're easier to take out, while her EMP provides the upper hand against multiple foes at once. Sombra's ability to Translocate and camouflage herself makes her a hard target to pin down.</p>
-                <a href="images/ability-0/que/matrix.html"><button id="button-join">Join Overwatch</button></a>
+                <a href="images/ability-0/que/matrix.html"><div class="button-container" id="button-join"><p>Join Overwatch</p></div></a>
             </div>
             <img id="sombra" src="images/sombra.jpg" alt="Somra-Portrait" />
         </div>
@@ -68,7 +68,7 @@
                 <blockquote cite="https://overwatch.fandom.com/wiki/Sombra/Quotes">
                     <em>"Ooh, I can't stand you hackers. You give those of us with skill a bad name."</em>
                 </blockquote>
-                <figcaption>-- D.VA</figcaption>
+                <div>-- D.VA</div>
             </div>
         </figure>
         <div class="signup">
@@ -77,8 +77,10 @@
                     <p>Call to action! It's time!</p>
                     <p>Find Sombra now!</p>
                 </div>
-                <div>
-                    <a href="images/ability-0/que/matrix.html"><button id="button-bottom">Join Overwatch</button></a>
+                <div >
+                    <a href="images/ability-0/que/matrix.html">
+                        <div class="button-container" id="button-bottom"><p>Join Overwatch</p></div>
+                    </a>
                 </div>
             </div>
         </div>
