Added a score tracking feature

--- a/Javascript/Rock-Paper-Scissors/rps.html
+++ b/Javascript/Rock-Paper-Scissors/rps.html
@@ -26,6 +26,14 @@
             <div id="computerResult"></div>
         </div>
         <div class="closing-items" id="result-output"></div>
+        <div class="results">
+            <div>Human Score:</div>
+            <div id="humanScore"></div>
+        </div>
+        <div class="results">
+            <div>Computer Score:</div>
+            <div id="computerScore"></div>
+        </div>
         <div class="closing-items">
             <button class="button" onclick="reset()">Reset ?</button>
         </div>
