Added default values

--- a/Javascript/Rock-Paper-Scissors/rps.html
+++ b/Javascript/Rock-Paper-Scissors/rps.html
@@ -19,20 +19,20 @@
         </div>
         <div class="results">
             <div>Human Plays:</div>
-            <div id="humanResult"></div>
+            <div id="humanResult">--</div>
         </div>
         <div class="results">
             <div>Computer Plays:</div>
-            <div id="computerResult"></div>
+            <div id="computerResult">--</div>
         </div>
-        <div class="closing-items" id="result-output"></div>
+        <div class="closing-items" id="result-output">--</div>
         <div class="results">
             <div>Human Score:</div>
-            <div id="humanScore"></div>
+            <div id="humanScore">0</div>
         </div>
         <div class="results">
             <div>Computer Score:</div>
-            <div id="computerScore"></div>
+            <div id="computerScore">0</div>
         </div>
         <div class="closing-items">
             <button class="button" onclick="reset()">Reset ?</button>
