--- a/Javascript/Etch-A-Sketch/sketch.html
+++ b/Javascript/Etch-A-Sketch/sketch.html
@@ -9,19 +9,16 @@
     <link rel="stylesheet" href="sketch.css">
 </head>
 <body>
-    <div>
+    <div id="title">
         <h1>Etch-A-Sketch</h1>
+        <div>
+            <button>New Grid</button>
+            <button onclick="reset()">Reset</button>
+        </div>
+        
     </div>
 
     <div id="main">
-        <div>
-            <div></div>
-            <div></div>
-        </div>
-        <div>
-            <div></div>
-            <div></div>
-        </div>
     </div>
     
     <script src="sketch.js"></script>
