--- a/Javascript/Etch-A-Sketch/sketch.html
+++ b/Javascript/Etch-A-Sketch/sketch.html
@@ -11,7 +11,7 @@
     <script>
         $(document).ready(function(){
             $(".etch-item").hover(function(){
-                $(this).css("background-color", "pink");
+                $(this).css("background-color", "black");
             }); 
         });
     </script>
@@ -20,10 +20,15 @@
     <div id="title">
         <h1>Etch-A-Sketch</h1>
         <div>
-            <button>New Grid</button>
+            <button onclick="gridDimensions()">New Grid</button>
             <button onclick="reset()">Reset</button>
         </div>
-        
+        <form>
+            <label for="rows">Rows (1-100)):</label>
+            <input type="number" id="rows" name="rows" min="1" max="100">
+            <label for="columns">Columns (1-100)):</label>
+            <input type="number" id="columns" name="columns" min="1" max="100">
+        </form>
     </div>
 
     <div id="main">
