--- a/Javascript/Calculator/calculator.html
+++ b/Javascript/Calculator/calculator.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
+    <p>Hello World</p>
     
     <script src="calculator.js"></script>
 </body>
