--- a/Javascript/Calculator/calculator.html
+++ b/Javascript/Calculator/calculator.html
@@ -18,66 +18,31 @@
             </div>
             <div id="body">
                 <div class="bodyColumn" id="leftColumn">
-                    <div class="bodyItem bodyItemOneX">
-                        <p>CE</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>7</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>4</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>1</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX" id="pooKey">
-                        <p>poo</p>
-                    </div>
+                    <div class="bodyItem bodyItemOneX button">CE</div>
+                    <div class="bodyItem bodyItemOneX button">7</div>
+                    <div class="bodyItem bodyItemOneX button">4</div>
+                    <div class="bodyItem bodyItemOneX button">1</div>
+                    <div class="bodyItem bodyItemOneX button" id="pooKey">poo</div>
                 </div>
                 <div class="bodyColumn">
-                    <div class="bodyItem bodyItemOneX">
-                        <p>/</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>8</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>5</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>2</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>0</p>
-                    </div>
+                    <div class="bodyItem bodyItemOneX button">/</div>
+                    <div class="bodyItem bodyItemOneX button">8</div>
+                    <div class="bodyItem bodyItemOneX button">5</div>
+                    <div class="bodyItem bodyItemOneX button">2</div>
+                    <div class="bodyItem bodyItemOneX button">0</div>
                 </div>
                 <div class="bodyColumn">
-                    <div class="bodyItem bodyItemOneX">
-                        <p>*</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>9</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>6</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>3</p>
-                    </div>
-                    <div class="bodyItem bodyItemOneX">
-                        <p>.</p>
-                    </div>
+                    <div class="bodyItem bodyItemOneX button">*</div>
+                    <div class="bodyItem bodyItemOneX button">9</div>
+                    <div class="bodyItem bodyItemOneX button">6</div>
+                    <div class="bodyItem bodyItemOneX button">3</div>
+                    <div class="bodyItem bodyItemOneX button">.</div>
                 </div>
                 <div class="bodyColumn" id="rightColumn">
-                    <div id="minus" class="bodyItem bodyItemOneX">
-                        <p>-</p>
+                    <div id="minus" class="bodyItem bodyItemOneX">-
                     </div>
-                    <div class="bodyItem bodyItemTwoX">
-                        <p>+</p>
-                    </div>
-                    <div class="bodyItem bodyItemTwoX" id="enterKey">
-                        <p>ENT</p>
-                    </div>
+                    <div class="bodyItem bodyItemTwoX">+</div>
+                    <div class="bodyItem bodyItemTwoX" id="enterKey">ENT</div>
                 </div>
             </div>
             
