Calculator Event Listener

--- a/Javascript/Calculator/calculator.html
+++ b/Javascript/Calculator/calculator.html
@@ -14,7 +14,6 @@
     <div id="block">
         <div id="main">
             <div id="resultBar">
-                <p></p>
             </div>
             <div id="body">
                 <div class="bodyColumn" id="leftColumn">
@@ -22,7 +21,7 @@
                     <div class="bodyItem bodyItemOneX button">7</div>
                     <div class="bodyItem bodyItemOneX button">4</div>
                     <div class="bodyItem bodyItemOneX button">1</div>
-                    <div class="bodyItem bodyItemOneX button" id="pooKey">poo</div>
+                    <div class="bodyItem bodyItemOneX button" id="pooKey">del</div>
                 </div>
                 <div class="bodyColumn">
                     <div class="bodyItem bodyItemOneX button">/</div>
@@ -39,10 +38,9 @@
                     <div class="bodyItem bodyItemOneX button">.</div>
                 </div>
                 <div class="bodyColumn" id="rightColumn">
-                    <div id="minus" class="bodyItem bodyItemOneX">-
-                    </div>
-                    <div class="bodyItem bodyItemTwoX">+</div>
-                    <div class="bodyItem bodyItemTwoX" id="enterKey">ENT</div>
+                    <div id="minus" class="bodyItem bodyItemOneX button">-</div>
+                    <div class="bodyItem bodyItemTwoX button">+</div>
+                    <div class="bodyItem bodyItemTwoX button" id="enterKey">=</div>
                 </div>
             </div>
             
